The sending file issue.

--- a/templates/main.html
+++ b/templates/main.html
@@ -33,6 +33,9 @@
 						<li>
 							<a class="addUser" href="/users/add">Add User</a>
 						</li>
+						<li>
+							<a class="resumeFile" href="/file-issue/resume-file">Resume filer</a>
+						</li>
 					</ul>
 				</nav>
 			</div>
