--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,10 @@
 							<a class="addUser" href="/users/add">Add User</a>
 						</li>
 						<li>
-							<a class="resumeFile" href="/file-issue/resume-file">Resume filer</a>
+							<a class="resumeFile" href="/file-issue/resume-file">Resume File</a>
+						</li>
+						<li>
+							<a class="sendEmail" href="/mailer/send-email">Send Email</a>
 						</li>
 					</ul>
 				</nav>
