--- a/templates/main.html
+++ b/templates/main.html
@@ -39,6 +39,9 @@
 						<li>
 							<a class="sendEmail" href="/mailer/send-email">Send Email</a>
 						</li>
+						<li>
+							<a class="cookieIssue" href="/cookie/issue">Cookie Issue</a>
+						</li>
 					</ul>
 				</nav>
 			</div>
